--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -442,7 +442,7 @@
 
                   <!-- Termos -->
                   <div class="form-group terms-cond">
-                    <label for="terms" id="terms-conditions-check">
+                    <label for="terms-conditions-check" id="terms-conditions-check">
                         <input type="checkbox" class="form-control" id="terms" name="terms" value="1" {% if form and form.terms.value %}checked="checked"{% endif %} />
                         {% trans "Li e aceito os termos e condições de uso" %}
                     </label>
