Alteracao logo VOI

--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -31,7 +31,7 @@
 
 <body id="page-top" class="login">
     <div id="login-box">
-            <img src="/static/img/logo-en-maior.png" style="width: 170px;" />
+            <img src="/static/img/logo.png" width="176"/>
             <p>{% trans "Digite abaixo seus dados de acesso" %}</p>
             <form action="" method="post" id="form-login">
               {% csrf_token %}
