--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -798,7 +798,7 @@ body {
 .navbar-brand {
     padding: 3px 0px 0px;
     height: 25px;
-    width: 110px;
+    width: 200px;
 }
 
 .navbar-brand img:first-child{
@@ -1512,8 +1512,15 @@ form small{
 }
 
 .sistema .navbar-brand img{
-    width: 200px;
-    margin-top: 12px;
+    display: block;
+    float: left;
+    margin-top: 24px;
+    width: 137px;
+}
+
+.sistema .navbar-brand img:first-child{
+    margin-top: 18px;
+    width: 50px;
 }
 
 .sistema .navbar-right {
