--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -58,7 +58,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="/" class="navbar-brand page-scroll">
-                    <img src="/static/img/logo-en.png" />
+                    <img src="/static/img/logo_sup.png" /><img src="/static/img/logo_bottom.png" />
                 </a>
             </div>
             <nav class="collapse navbar-collapse" id="bs-navbar">
@@ -120,13 +120,18 @@
                             </li>
                         </ul>
                     </li>
-{% endcomment %}
+
                     <li class="tutorial">
                         <a href="{% trans '/pt/ajuda/' %}" target="_blank" class="abre-tutorial"><i class="fa fa-leanpub"></i> {% trans "Tutorial Plataforma" %}</a>
                     </li>
 
                     <li class="tutorial adress">
                         <a href="javascript:void(0);" class="abre-tutorial open-adress"><i class="fa fa-map-marker"></i> {% trans "Ver Endereço VOI" %}</a>
+                    </li>
+{% endcomment %}
+
+                    <li class="{% block comoFunciona %}{% endblock %}">
+                        <a href="/como-funciona" class=""><i class="fa fa-leanpub"></i> {% trans "Como Funciona" %}</a>
                     </li>
 
                     {% if user|has_product_perm:'view_products' or user|has_product_perm:'add_product' %}
@@ -261,7 +266,7 @@
                 </div>
                 <div class="col-md-3">
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
-                        <img src="/static/img/logo-en.png" width="20px" /> by {% trans "PrepShip Tool" %}</a>
+                        <img src="/static/img/logo-en-maior.png" width="20px" /> by {% trans "PrepShip Tool" %}</a>
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
