Ajustes imagem default lotes

--- a/html/templates/pagina_lotes_novo_layout.html
+++ b/html/templates/pagina_lotes_novo_layout.html
@@ -122,7 +122,7 @@
               <div class="box-container-lote">
                  <a href="#" class="box-lote">
                      <div class="foto">
-                        <img src="/static/img/controle.jpg" />
+                        <img src="/static/img/default-no-image.png" />
                      </div>
                      <div class="descricao-lote-prod">
                         <h6>Cast Iron Casserole Dishes by La Cuisine</h6>
@@ -137,7 +137,7 @@
                  <a href="#" class="box-lote">
 
                      <div class="foto">
-                        <img src="/static/img/iphone.jpg" />
+                        <img src="/static/img/default-no-image.png" />
                      </div>
                      <div class="descricao-lote-prod">
                         <h6>Cast Iron Casserole Dishes by La Cuisine</h6>
