--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -109,7 +109,7 @@
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-shopping-bag"></i> {% trans "Loja" %} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="{% url 'store' %}"><i class="fa fa-fw fa-shopping-cart"></i> {% trans "Produtos" %}</a>
+                                <a href="{% url 'store' %}"><i class="fa fa-fw fa-shopping-cart"></i> {% trans "Lotes" %}</a>
                             </li>
                             <li class="divider"></li>
                             <li>
@@ -128,7 +128,7 @@
 {% endcomment %}
 
                     <li class="{% block comoFunciona %}{% endblock %}">
-                        <a href="/como-funciona" class=""><i class="fa fa-leanpub"></i> {% trans "Como Funciona" %}</a>
+                        <a href="{% url 'how_it_works' %}" class=""><i class="fa fa-leanpub"></i> {% trans "Como Funciona" %}</a>
                     </li>
 
                     {% if user|has_product_perm:'view_products' or user|has_product_perm:'add_product' %}
