--- a/store/templates/admin/store/change_form.html
+++ b/store/templates/admin/store/change_form.html
@@ -1,5 +1,8 @@
 {% extends "admin/change_form.html" %}
+{% load lots %}
 
 {% block extrahead %}{{ block.super }}
 <script type="text/javascript" src="/static/js/specifics/store.js"></script>
 {% endblock %}
+
+{% block submit_buttons_bottom %}{% my_submit_row original %}{% endblock %}
